--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -440,7 +440,6 @@ services:
     image: timberio/vector:0.28.1-alpine
     restart: unless-stopped
     volumes:
-      - ./volumes/logs/vector.yml:/etc/vector/vector.yml:ro,z
       - ${DOCKER_SOCKET_LOCATION}:/var/run/docker.sock:ro,z
     healthcheck:
       test:
@@ -460,7 +459,7 @@ services:
     command:
       [
         "--config",
-        "/etc/vector/vector.yml"
+        "/etc/vector/vector.toml"
       ]
     security_opt:
       - "label=disable"
